--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop = "64dp"
         android:inputType = "textAutoComplete"
         android:hint="Task Name"
+        android:autofillHints="name"
         />
 
     <EditText
@@ -57,6 +58,20 @@
         android:layout_marginTop = "128dp"
         android:inputType = "textAutoComplete"
         android:hint="Task Location"
+        android:autofillHints="postalAddress"
+        />
+
+    <EditText
+        android:id = "@+id/editPriority"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textSize = "20sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop = "160dp"
+        android:inputType = "textAutoComplete"
+        android:hint="Task Priority"
         />
 
     <Button
