--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,26 +21,25 @@
 
     <ImageButton
         android:id="@+id/addbutton"
-        android:contentDescription="Newbutton to create a new task"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="700dp"
         android:backgroundTint="#7ea8ed"
+        android:contentDescription="Newbutton to create a new task"
 
         android:padding="20dp"
         android:src="@android:drawable/ic_input_add"
         app:tint="#0000FF" />
 
-    <TextView
-        android:id = "@+id/taskText"
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle = "bold"
-        android:textColor="@android:color/black"
-        android:textSize = "32sp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop = "48dp"/>
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="160dp"
+        android:textColor="@android:color/black"
+        android:textSize="32sp" />
 
 </RelativeLayout>
