--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/design_main"
+    android:padding="20dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id = "@+id/tastsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle = "bold"
-        android:text = "Tasks"
-        android:textColor="@android:color/black"
-        android:textSize = "32sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop = "16dp"/>
+    <ImageView
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/ic_bubbl"
+        android:id="@+id/bubblLogo"/>
 
+    <RelativeLayout
+        android:id="@+id/taskView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:background="@color/design_secondary"
+        android:layout_below="@id/bubblLogo">
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="32sp"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 
     <ImageButton
-        android:id="@+id/addbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="700dp"
-        android:backgroundTint="#7ea8ed"
-        android:contentDescription="Newbutton to create a new task"
-
-        android:padding="20dp"
-        android:src="@android:drawable/ic_input_add"
-        app:tint="#0000FF" />
-
-    <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="160dp"
-        android:textColor="@android:color/black"
-        android:textSize="32sp" />
+        android:backgroundTint="#7ea8ed"
+        android:contentDescription="Button to create a new task"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/taskView"
+        android:src="@android:drawable/ic_input_add"
+        app:tint="#0000FF" />
 
 </RelativeLayout>
