--- a/app/src/main/res/layout/tasks_list_item.xml
+++ b/app/src/main/res/layout/tasks_list_item.xml
@@ -4,7 +4,8 @@
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     app:cardMaxElevation="10dp"
