--- a/app/src/main/res/layout/tasks_list_item.xml
+++ b/app/src/main/res/layout/tasks_list_item.xml
@@ -74,6 +74,18 @@
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
+            <TextView
+                android:id="@+id/dateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                android:text="Date"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_below="@id/locationText"/>
+
         </RelativeLayout>
 
     </LinearLayout>
