--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
 
     <ImageView
         android:id="@+id/bubblLogo"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="5dp"
         android:src="@mipmap/ic_bubbl" />
 
     <RelativeLayout
