--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF627D98"
+    android:background="#48a2c7"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/bubblLogo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        android:src="@mipmap/ic_bubbl" />
+        android:src="@mipmap/ic_bubbl_inverted" />
 
     <RelativeLayout
         android:id="@+id/taskView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/bubblLogo"
-        android:background="#FFEEEEEE">
+        android:background="#48a2c7">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tasksRecView"
@@ -35,12 +35,13 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             app:srcCompat="@android:drawable/ic_input_add"
+            app:tint="#48a2c7"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#FF627D98"
-            app:backgroundTint="@color/black"
+            android:backgroundTint="@color/white"
+            app:backgroundTint="@color/white"
             app:borderWidth="3dp" />
     </RelativeLayout>
 
