--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="design_main">#FF286681</color>
     <color name="design_secondary">#FF183E4E</color>
+    <color name="statusBarColor">#48a2c7</color>
 </resources>
