--- a/app/src/main/res/drawable/custom_progress_bg.xml
+++ b/app/src/main/res/drawable/custom_progress_bg.xml
@@ -13,7 +13,7 @@
         <scale android:scaleWidth="100%">
             <shape android:shape="rectangle">
                 <corners android:radius="6dp"/>
-                <solid android:color="#829AB1"/>
+                <solid android:color="#48a2c7"/>
             </shape>
         </scale>
     </item>
